# SPEIT-CS457

./: .gitignore
Homework1/: README.md  questions.py
Homework2/: mininet_run.py
Homework2/cxx/: CMakeLists.txt
Homework2/cxx/src/common/: ConnectionDaemon.h  MsgInterpreter.h  StorageDaemon.h  data.h  macros.h  path.cpp  path.h  utils.cpp  utils.h
Homework2/cxx/src/tcpClient/: TcpClientCLI.cpp  TcpClientFunc.cpp  TcpClientMain.cpp  TcpClientMain.h
Homework2/cxx/src/tcpNode/: TcpNodeFunc.cpp  TcpNodeMain.cpp  TcpNodeMain.h  TcpNodeServe.cpp  TcpNodeSync.cpp
Homework2/cxx/src/tcpServer/: TcpServerMain.cpp  TcpServerMain.h
Homework2/cxx/src/tcpTracker/: PeerDaemon.h  TcpTrackerMain.cpp  TcpTrackerMain.h
Homework2/deprecated/Files/folder1/: text1.txt
Homework2/deprecated/Node/: connection.cpp  main.cpp  main.h  storage.cpp  utils.cpp  utils.h
Homework2/deprecated/Tracker/: connection.h  main.cpp  main.h  network.h  peers.h
Homework2/deprecated/helloworld/: test1.py
Homework2/deprecated/tcp_client/: main.py
Homework2/deprecated/tcp_server/: filesys.py  main.py  settings.json
Homework2/deprecated/tools/: deprecated.txt  send_without_stop.cpp  test_client.cpp  test_function.cpp
Homework2/latex/: main.bib  main.tex
Homework2/latex/contents/: body.tex  introduction.tex  summary.tex
Homework2/latex/visualization/: Lab2.ai
Lab1/: note.md
Lab2/: custom_topo.sh  note.md  topo-iperf.py  topo2.py
Week3/socket/: CMakeLists.txt
Week3/socket/pthread/: thread.cc
Week3/socket/tcp/: client.cc  server.cc
Week3/socket/udp/: client.cc  server.cc
