project(socket)
cmake_minimum_required(VERSION 3.10)
set (CMAKE_CXX_FLAGS "-pthread")
#find_package(Threads)
#target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
add_executable(udp-server udp/server.cc)
add_executable(udp-client udp/client.cc)
add_executable(tcp-server tcp/server.cc)
add_executable(tcp-client tcp/client.cc)
add_executable(thread-run pthread/thread.cc)